plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.7'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.hyun'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	/* Lombok */
	compileOnly 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	/* Database */
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.0'
	// testCompileOnly 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.0'

	/* Log4JDBC */
	testImplementation group: 'org.bgee.log4jdbc-log4j2', name:'log4jdbc-log4j2-jdbc4.1', version: '1.16'

	/* SpringSecurity */
	implementation 'org.springframework.boot:spring-boot-starter-security'

	/* Jwt */
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	/* Gson */
	implementation 'com.google.code.gson:gson'

	/* Validation */
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	/* Swagger */
	implementation "io.springfox:springfox-boot-starter:3.0.0"
	implementation "io.springfox:springfox-swagger-ui:3.0.0"

	/* Email */
	implementation 'org.springframework.boot:spring-boot-starter-mail'
}

tasks.named('test') {
	useJUnitPlatform()
}
